--- a/test.ipynb
+++ b/test.ipynb
@@ -2,27 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sql\n",
+      "  Downloading sql-2022.4.0.tar.gz (4.2 kB)\n",
+      "Building wheels for collected packages: sql\n",
+      "  Building wheel for sql (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for sql: filename=sql-2022.4.0-py3-none-any.whl size=4325 sha256=53d60e80b432220c60bc11af476fab3b3d14fc26e33a594078492279142fadc3\n",
+      "  Stored in directory: /home/ashmawy/.cache/pip/wheels/46/08/97/9539d985c524b7a3793898bbf6c95879a0e9daf5fc9ba49fd0\n",
+      "Successfully built sql\n",
+      "Installing collected packages: sql\n",
+      "Successfully installed sql-2022.4.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql module is not an IPython extension.\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%sql` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "%sql postgresql://student:student@127.0.0.1/sparkifydb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%sql` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "%sql SELECT * FROM songplays LIMIT 5;"
    ]
@@ -81,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -95,7 +145,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "473131eb510692de2cef3a69a80f9af127f216bd7e82f61d75e93ca17049a393"
+   }
   }
  },
  "nbformat": 4,
