renamed "times" table to "time" : )

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -385,8 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs_df = pd.read_json(logs_filepath, lines = True)\n",
-    "#logs_df = logs_df.transpose()"
+    "logs_df = pd.read_json(logs_filepath, lines = True)"
    ]
   },
   {
