--- a/etl.ipynb
+++ b/etl.ipynb
@@ -1276,20 +1276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_180548/557215541.py:4: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "/tmp/ipykernel_180548/3692356031.py:4: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
       "  week_of_year = next_song_filter_df['ts'].dt.weekofyear\n"
      ]
     }
    ],
    "source": [
-    "time_stamp = next_song_filter_df['ts']\n",
+    "start_time = next_song_filter_df['ts']\n",
     "hour = next_song_filter_df['ts'].dt.hour\n",
     "day = next_song_filter_df['ts'].dt.day\n",
     "week_of_year = next_song_filter_df['ts'].dt.weekofyear\n",
@@ -1297,13 +1297,13 @@
     "year = next_song_filter_df['ts'].dt.year\n",
     "weekday = next_song_filter_df['ts'].dt.weekday\n",
     "\n",
-    "time_data = [time_stamp, hour, day, week_of_year, month, year, weekday]\n",
-    "column_labels = ('timestamp', 'hour', 'day', 'week of year', 'month', 'year', 'weekday')"
+    "time_data = [start_time, hour, day, week_of_year, month, year, weekday]\n",
+    "column_labels = ('start_time', 'hour', 'day', 'week of year', 'month', 'year', 'weekday')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>timestamp</th>\n",
+       "      <th>start_time</th>\n",
        "      <th>hour</th>\n",
        "      <th>day</th>\n",
        "      <th>week of year</th>\n",
@@ -1460,7 +1460,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                       timestamp  hour  day  week of year  month  year  \\\n",
+       "                      start_time  hour  day  week of year  month  year  \\\n",
        "2  1970-01-01 00:25:41.106106796     0    1             1      1  1970   \n",
        "4  1970-01-01 00:25:41.106352796     0    1             1      1  1970   \n",
        "5  1970-01-01 00:25:41.106496796     0    1             1      1  1970   \n",
@@ -1485,7 +1485,7 @@
        "13        3  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1504,9 +1504,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UniqueViolation",
+     "evalue": "duplicate key value violates unique constraint \"time_pkey\"\nDETAIL:  Key (start_time)=(1970-01-01 00:25:41.106107) already exists.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUniqueViolation\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_180548/2381865783.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtime_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime_table_insert\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mUniqueViolation\u001b[0m: duplicate key value violates unique constraint \"time_pkey\"\nDETAIL:  Key (start_time)=(1970-01-01 00:25:41.106107) already exists.\n"
+     ]
+    }
+   ],
    "source": [
     "for i, row in time_df.iterrows():\n",
     "    cur.execute(time_table_insert, list(row))"
