--- a/etl.ipynb
+++ b/etl.ipynb
@@ -1620,13 +1620,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "songplay_data = next_song_filter_df.iloc[:, [15, 17, 7, 12, 8, 16]]\n",
-    "\n",
-    "for _ in range(len(songplay_data)):\n",
+    "for index, row in next_song_filter_df.iterrows():\n",
     "    cur.execute(song_select)\n",
     "    results = cur.fetchone()\n",
     "    \n",
@@ -1635,10 +1633,9 @@
     "    else:\n",
     "        song_id, artist_id = None, None\n",
     "    \n",
-    "    songplay_data['song_id'] = song_id\n",
-    "    songplay_data['artist_id'] = artist_id\n",
+    "    songplay_data = (row.ts, row.userId, row.level, row.sessionId, row.location, row.userAgent, song_id, artist_id)\n",
     "\n",
-    "cur.execute(songplay_table_insert, songplay_data.values.tolist())\n",
+    "    cur.execute(songplay_table_insert, songplay_data)\n",
     "\n"
    ]
   },
