Writing the README.md file at last : )

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -917,7 +917,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_204051/20436155.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_211047/20436155.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1283,7 +1283,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_204051/3692356031.py:4: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "/tmp/ipykernel_211047/3692356031.py:4: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
       "  week_of_year = next_song_filter_df['ts'].dt.weekofyear\n"
      ]
     }
@@ -1508,7 +1508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, row in time_df.iterrows():\n",
+    "for _, row in time_df.iterrows():\n",
     "    cur.execute(time_table_insert, list(row))"
    ]
   },
@@ -1593,7 +1593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, row in user_df.iterrows():\n",
+    "for _, row in user_df.iterrows():\n",
     "    cur.execute(user_table_insert, row)"
    ]
   },
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
