--- a/etl.ipynb
+++ b/etl.ipynb
@@ -917,7 +917,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_228821/20436155.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_249293/20436155.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1283,7 +1283,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_228821/3692356031.py:4: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "/tmp/ipykernel_249293/3692356031.py:4: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
       "  week_of_year = next_song_filter_df['ts'].dt.weekofyear\n"
      ]
     }
@@ -1575,7 +1575,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_df = logs_df.iloc[:, [17, 2, 5, 3, 7]]\n",
+    "user_df = next_song_filter_df.iloc[:, [17, 2, 5, 3, 7]]\n",
     "user_df = user_df.drop_duplicates()"
    ]
   },
