--- a/etl.ipynb
+++ b/etl.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +917,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_249293/20436155.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_278257/20436155.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1283,7 +1283,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_249293/3692356031.py:4: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "/tmp/ipykernel_278257/3692356031.py:4: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
       "  week_of_year = next_song_filter_df['ts'].dt.weekofyear\n"
      ]
     }
@@ -1625,11 +1625,12 @@
    "outputs": [],
    "source": [
     "for index, row in next_song_filter_df.iterrows():\n",
-    "    cur.execute(song_select)\n",
+    "    cur.execute(song_select, (row.song, row.artist, row.length))\n",
     "    results = cur.fetchone()\n",
     "    \n",
     "    if results:\n",
     "        song_id, artist_id = results\n",
+    "        print(song_id, artist_id)\n",
     "    else:\n",
     "        song_id, artist_id = None, None\n",
     "    \n",
@@ -1637,6 +1638,25 @@
     "\n",
     "    cur.execute(songplay_table_insert, songplay_data)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2,)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cur.execute(songplay_test_select)\n",
+    "results = cur.fetchall()\n",
+    "print(results)"
    ]
   },
   {
@@ -1655,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
