--- a/etl.ipynb
+++ b/etl.ipynb
@@ -917,7 +917,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_278257/20436155.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_279996/20436155.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1283,7 +1283,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_278257/3692356031.py:4: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "/tmp/ipykernel_279996/3692356031.py:4: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
       "  week_of_year = next_song_filter_df['ts'].dt.weekofyear\n"
      ]
     }
@@ -1649,7 +1649,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(2,)]\n"
+      "[(4627, datetime.datetime(1970, 1, 1, 0, 25, 42, 837408), 15, 'paid', 'SOZCTXZ12AB0182364', 'AR5KOSW1187FB35FF4', 818, 'Chicago-Naperville-Elgin, IL-IN-WI', '\"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36\"')]\n"
      ]
     }
    ],
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
